--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "react-dom": "^17.0.2",
     "react-particles-js": "^2.7.1",
     "react-player": "^2.9.0",
+    "react-redux-firebase": "^3.10.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux-firestore": "^0.15.0",
     "tsparticles": "^1.32.0",
     "web-vitals": "^1.1.2"
   },
